--- a/script_facade/client/templates/request_106.xml
+++ b/script_facade/client/templates/request_106.xml
@@ -2,7 +2,7 @@
 <Message version="010" release="006" xmlns="http://www.ncpdp.org/schema/SCRIPT">
     <Header>
         <To Qualifier="ZZZ">WA-OHP</To>
-        <From Qualifier="ZZZ">{FromQualifier}</From>
+        <From Qualifier="ZZZ">{{FromQualifier}}</From>
         <MessageID>217823234234</MessageID>
         <SentTime>2019-12-12T19:49:01Z</SentTime>
         <Security>
@@ -23,47 +23,47 @@
         <RxHistoryRequest>
             <Prescriber>
                 <Identification>
-                    <DEANumber>{DEA}</DEANumber>
-                    <NPI>{NPI}</NPI>
-                    <MutuallyDefined>{MutuallyDefined}</MutuallyDefined>
+                    <DEANumber>{{DEA}}</DEANumber>
+                    <NPI>{{NPI}}</NPI>
+                    <MutuallyDefined>{{MutuallyDefined}}</MutuallyDefined>
                 </Identification>
-                <Specialty>{Specialty}</Specialty>
-                <ClinicName>{ClinicName}</ClinicName>
+                <Specialty>{{Specialty}}</Specialty>
+                <ClinicName>{{ClinicName}}</ClinicName>
                 <Name>
-                    <LastName>{PrescriberLName}</LastName>
-                    <FirstName>{PrescriberFName}</FirstName>
+                    <LastName>{{PrescriberLName}}</LastName>
+                    <FirstName>{{PrescriberFName}}</FirstName>
                 </Name>
                 <Address>
-                    <AddressLine1>{PrescriberAddress1}</AddressLine1>
-                    <AddressLine2>{PrescriberAddress2}</AddressLine2>
-                    <City>{PrescriberCity}</City>
-                    <State>{PrescriberState}</State>
-                    <ZipCode>{PrescriberZip}</ZipCode>
-                    <PlaceLocationQualifier>{PrescriberPlaceLoc}</PlaceLocationQualifier>
+                    <AddressLine1>{{PrescriberAddress1}}</AddressLine1>
+                    <AddressLine2>{{PrescriberAddress2}}</AddressLine2>
+                    <City>{{PrescriberCity}}</City>
+                    <State>{{PrescriberState}}</State>
+                    <ZipCode>{{PrescriberZip}}</ZipCode>
+                    <PlaceLocationQualifier>{{PrescriberPlaceLoc}}</PlaceLocationQualifier>
                 </Address>
                 <CommunicationNumbers>
                     <Communication>
-                        <Number>{ComNumber}</Number>
-                        <Qualifier>{ComQualifier}</Qualifier>
+                        <Number>{{ComNumber}}</Number>
+                        <Qualifier>{{ComQualifier}}</Qualifier>
                     </Communication>
                 </CommunicationNumbers>
             </Prescriber>
             <Patient>
                 <Name>
-                    <LastName>{PatientLName}</LastName>
-                    <FirstName>{PatientFName}</FirstName>
+                    <LastName>{{PatientLName}}</LastName>
+                    <FirstName>{{PatientFName}}</FirstName>
                 </Name>
-                <Gender>{PatientGender}</Gender>
-                <DateOfBirth><Date>{PatientDOB}</Date></DateOfBirth>
+                <Gender>{{PatientGender}}</Gender>
+                <DateOfBirth><Date>{{PatientDOB}}</Date></DateOfBirth>
             </Patient>
             <BenefitsCoordination>
                 <EffectiveDate>
-                    <Date>{BenEffectiveDate}</Date>
+                    <Date>{{BenEffectiveDate}}</Date>
                 </EffectiveDate>
                 <ExpirationDate>
-                    <Date>{BenExpirationDate}</Date>
+                    <Date>{{BenExpirationDate}}</Date>
                 </ExpirationDate>
-                <Consent>{BenConsent}</Consent>
+                <Consent>{{BenConsent}}</Consent>
             </BenefitsCoordination>
         </RxHistoryRequest>
     </Body>
