Patient zip or phone required.

--- a/script_facade/client/templates/request_106.xml
+++ b/script_facade/client/templates/request_106.xml
@@ -54,6 +54,9 @@
                 </Name>
                 <Gender>{{PatientGender}}</Gender>
                 <DateOfBirth><Date>{{PatientDOB}}</Date></DateOfBirth>
+                <Address>
+                    <ZipCode>{{PatientZip}}</ZipCode>
+                </Address>
             </Patient>
             <BenefitsCoordination>
                 <EffectiveDate>
