Template site-specific identifiers

--- a/script_facade/client/templates/request_20170701.xml
+++ b/script_facade/client/templates/request_20170701.xml
@@ -4,7 +4,7 @@ TransactionDomain="SCRIPT" TransactionVersion="20170715" TransportVersion="20170
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <Header>
         <To Qualifier="ZZZ">WA-OHP</To>
-        <From Qualifier="D">7uycso03</From>
+        <From Qualifier="D">{{FromQualifier}}</From>
         <MessageID>MESAGE1234567890</MessageID>
         <SentTime>2019-11-14T12:00:00Z</SentTime>
         <Security>
@@ -12,7 +12,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
                 <Username>9999900</Username>
             </UsernameToken>
             <Sender>
-                <TertiaryIdentification>tester1</TertiaryIdentification>
+                <TertiaryIdentification>{{SenderTertiaryIdentification}}</TertiaryIdentification>
             </Sender>
             <Receiver>
                 <TertiaryIdentification>WA-OHP</TertiaryIdentification>
